DuPont DevSB/src/objects/Rule__c.object
<CustomObject>
    <description>Contains record type specific rules which will return a score, approver or other values based on a criteria</description>
    <fields>
        <fullName>Geo_Region__c</fullName>
        <description>This custom field is used to select the region of the Rule object .</description>
        <label>Geo Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The checkbox will allow users to control active/inactive rule and manage the rules better.</description>
        <inlineHelpText>Uncheck to make the rule inactive</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <description>The DuPont organization that owns this record, should be a combination of the accepted abbreviations of SBU(Strategic Business Unit)-BU(Business Unit)-SubBU(Business or Product Line)</description>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGNH</fullName>
                </value>
                <value>
                    <fullName>AGNH-COZR</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Carpet Backing</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Fire Safety</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>CORP-Admin General</fullName>
                </value>
                <value>
                    <fullName>CORP-Core</fullName>
                </value>
                <value>
                    <fullName>CORP-Corporate Plans</fullName>
                </value>
                <value>
                    <fullName>CORP-Non-Aligned</fullName>
                </value>
                <value>
                    <fullName>CORS</fullName>
                </value>
                <value>
                    <fullName>CORS-Aviation</fullName>
                </value>
                <value>
                    <fullName>CORS-Corp Remediation</fullName>
                </value>
                <value>
                    <fullName>CORS-Government Affairs</fullName>
                </value>
                <value>
                    <fullName>CORS-Public Affairs</fullName>
                </value>
                <value>
                    <fullName>CR&amp;D</fullName>
                </value>
                <value>
                    <fullName>DA-Nano LLC</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Aniline</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DAHS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DWT</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <description>Stores the range of  scores and corresponding grades to that scores.</description>
        <label>Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>This custom field contains the record Type Name.</description>
        <label>Rule Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <description>For capturing the application where the rule will be used</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dynamic Approval</fullName>
                </value>
                <value>
                    <fullName>Scoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sobject_Type__c</fullName>
        <description>This custom field is used to recognize the type of SObject.</description>
        <label>Sobject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_To__c</fullName>
        <description>The field in the Sobject to which the calculated score has to be written.</description>
        <label>Write To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Scoring_Rules</fullName>
        <columns>NAME</columns>
        <columns>Geo_Region__c</columns>
        <columns>Sobject_Type__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Write_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rule_Type__c</field>
            <operation>equals</operation>
            <value>Scoring</value>
        </filters>
        <label>Scoring Rules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>